Prevent word wrap within footer items. Darken font to improve legibility.

--- a/css_story.scss
+++ b/css_story.scss
@@ -350,7 +350,7 @@ footer {
 
 footer .fineprint {
   font-size: 0.625em;
-  color: #ddd;
+  color: #999;
   text-align: right;
 }
 
@@ -365,6 +365,10 @@ footer .fineprint * {
 
 footer .fineprint a {
   text-decoration: underline !important;
+}
+
+footer .fineprint span.nowrap {
+  white-space: nowrap;
 }
 
 #story {
